--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Tue Sep 27 2022 13:02:00 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Tue Sep 27 2022 15:32:13 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="tdd-saturn.webflow.io" data-wf-page="632f2636782831baf618c0a0"
     data-wf-site="632f263678283128df18c09d">
 
@@ -379,12 +379,12 @@
                     <div class="flowout-slider-styling w-embed">
                         <style>
                             .w-slider-dot {
-                                background: #ffea94;
+                                background: #C8EBC8;
                                 opacity: 0.2;
                             }
 
                             .w-slider-dot.w-active {
-                                background: #ffea94;
+                                background: #C8EBC8;
                                 opacity: 1;
                             }
                         </style>
