--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     data-wf-site="632f263678283128df18c09d">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JR4KW3MPHX"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JR4KW3MPHX');
+    </script>
     <meta charset="utf-8" />
     <title>Think Done Digital</title>
     <meta
