--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Tue Sep 27 2022 15:32:13 GMT+0000 (Coordinated Universal Time) -->
+<!DOCTYPE html>
 <html data-wf-domain="tdd-saturn.webflow.io" data-wf-page="632f2636782831baf618c0a0"
     data-wf-site="632f263678283128df18c09d">
 
@@ -405,12 +404,12 @@
                     <div class="flowout-slider-styling w-embed">
                         <style>
                             .w-slider-dot {
-                                background: #C8EBC8;
+                                background: #ffde59;
                                 opacity: 0.2;
                             }
 
                             .w-slider-dot.w-active {
-                                background: #C8EBC8;
+                                background: #ffde59;
                                 opacity: 1;
                             }
                         </style>
@@ -516,7 +515,7 @@
         <section id="faq" class="flowout-faq flowout-section">
             <div class="flowout-container w-container">
                 <div class="flowout-dropdown-container">
-                    <h2 class="flowout-dropdown-heading">Have questions?</h2>
+                    <h2 class="flowout-dropdown-heading">Questions you might have</h2>
                     <div class="flowout-dropdown-wrapper style-2">
                         <div data-hover="false" data-delay="0" data-w-id="481d921e-49cd-40c4-95ef-af2426596e11"
                             class="flowout-dropdown w-dropdown">
