--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                         we will get in touch with you.</h4>
                 </div>
                 <div class="flowout-hero-wrapper flowout-hero-buttons"><a
-                        href="mailto:thinkdoneco@gmail.com?subject=Free%20Quote"
+                        href="mailto:shane@thinkdone.co?subject=Free%20Quote"
                         class="flowout-button flowout-button-big flowout-button-cta flowout-button-footer w-button">Email
                         us</a></div>
             </div>
