--- a/index.html
+++ b/index.html
@@ -585,11 +585,10 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">We&#x27;re a team of web developers, which means that
-                                    we work with web technologies to build websites. Specifically right now, we&#x27;ve
-                                    been helping Shopify store owners with new store builds, customizations to their
-                                    existing themes, providing help with improving broken user experience (UX) issues,
-                                    and even store optimization.</p>
+                                <p class="flowout-faq-answer-text">As a team of web developers, we specialize in using web technologies 
+                                    to build websites. Currently, we focus on assisting Shopify store owners with creating new stores, 
+                                    making customizations to their existing themes, addressing broken user experience (UX) issues, and 
+                                    optimizing their stores.</p>
                             </div>
                         </div>
                         <div class="flowout-single-faq">
@@ -598,11 +597,10 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">Anyone can get into this type of business. If you
-                                    have an entrepreneurial spirit or have an interest for the new emerging world of
-                                    e-commerce, this business is ideal for you. Our ideal partner is one who understands
-                                    that building a brand has allot of moving parts and understands that it may takes
-                                    time to build brand equity and long term value.</p>
+                                <p class="flowout-faq-answer-text">Anyone can get into this type of business. If you're 
+                                    passionate about entrepreneurship and the evolving e-commerce space, this business 
+                                    may be an ideal fit for you. Our ideal partner is one who understands that brand-building 
+                                    involves multiple components and requires time to establish brand equity and long-term value.</p>
                             </div>
                         </div>
                         <div class="flowout-single-faq">
@@ -611,11 +609,11 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">Some of the popular services we offer are: Complete
-                                    Shopify store-builds, Custom Shopify theme development, Custom dynamic theme
-                                    sections, App integrations, Speed optimization, Store configuration, Language
-                                    translations or shipping settings. These are just a few examples but we can jump on
-                                    a quick phone call in order to discuss your specific needs.</p>
+                                <p class="flowout-faq-answer-text">We offer various popular services such as complete Shopify store 
+                                    builds, developing custom Shopify themes, creating custom dynamic theme sections, integrating 
+                                    apps, optimizing speed, configuring stores, and setting up language translations or shipping 
+                                    settings. These are only a few examples, and we can schedule a quick phone call to discuss 
+                                    your specific requirements.</p>
                             </div>
                         </div>
                         <div class="flowout-single-faq">
@@ -625,9 +623,9 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">We provide both custom tasks and full-service theme
-                                    creation and design. Please contact us and we will provide a separate quotation for
-                                    the job.</p>
+                                <p class="flowout-faq-answer-text">We offer both, custom tasks and full-service theme design 
+                                    and development. If you would like to discuss further, please reach out and we will be happy 
+                                    to provide a tailored quote for your project.</p>
                             </div>
                         </div>
                         <div class="flowout-single-faq">
@@ -636,10 +634,10 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">That really depends because different jobs require
-                                    different solutions. Here&#x27;s what we can tell you without knowing about your
-                                    specific project, your budget should be at least $1,000. Small projects can be less
-                                    than this, but on average this is what most customization work looks like.</p>
+                                <p class="flowout-faq-answer-text">The required budget varies depending on the project's 
+                                    unique requirements. However, as a general guideline, a budget of at least $1,000 is
+                                    recommended for most customization work. Smaller tasks may require less, but this is 
+                                    the average cost for most customization work.</p>
                             </div>
                         </div>
                     </div>
