--- a/index.html
+++ b/index.html
@@ -161,10 +161,9 @@
                                 what matters, like improving customer service, marketing, using data to make informed
                                 decisions, and more.</p>
                             <div class="flowout-divider"></div>
-                            <p class="flowout-section-item-quote">“These guys are so amazing! I just opened my store,
-                                and they helped me in every step of the way. They showed me how to manage my store. I
-                                couldn&#x27;t ask for more from them. They are also very friendly and super informative.
-                                You can&#x27;t go wrong with these guys!”</p>
+                            <p class="flowout-section-item-quote">“I am incredibly thankful to the team for their support 
+                                during the opening of my store. They provided assistance in every step of the process and 
+                                I am very appreciative of their hard work.”</p>
                             <div class="flowout-author flowout-section-item-author">
                                 <div class="flowout-author-image author-2"></div>
                                 <div class="flowout-author-info">
@@ -183,9 +182,9 @@
                                 specialty. We analyze your data, recommend improvements, and implement them all to
                                 achieve maximum results.</p>
                             <div class="flowout-divider"></div>
-                            <p class="flowout-section-item-quote">“The team at Think Done helped me grow my business by
-                                providing great insights and strategies to help me expand into other markets. They made
-                                a complicated business process easy to understand, and I would highly recommend them.”
+                            <p class="flowout-section-item-quote">“They offered invaluable guidance and strategies which 
+                                enabled me to grow my business and explore other markets. I would wholeheartedly endorse their 
+                                services.”
                             </p>
                             <div class="flowout-author flowout-section-item-author">
                                 <div class="flowout-author-image author-3"></div>
