--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     <meta charset="utf-8" />
     <title>Think Done Digital</title>
     <meta
-        content="We craft e-commerce experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
+        content="We craft digital experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
         name="description" />
     <meta content="Think Done Digital" property="og:title" />
     <meta
-        content="We craft e-commerce experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
+        content="We craft digital experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
         property="og:description" />
     <meta
         content="https://uploads-ssl.webflow.com/632f263678283128df18c09d/6331f36e7c790e83333fdaa9_tdd-notion-header.png"
         property="og:image" />
     <meta content="Think Done Digital" property="twitter:title" />
     <meta
-        content="We craft e-commerce experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
+        content="We craft digital experiences that attract, delight and retain your customers with high quality web design, development and marketing solutions."
         property="twitter:description" />
     <meta
         content="https://uploads-ssl.webflow.com/632f263678283128df18c09d/6331f36e7c790e83333fdaa9_tdd-notion-header.png"
@@ -582,9 +582,9 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">As a team of web developers, we specialize in using web technologies 
-                                    to build websites. Currently, we focus on assisting Shopify store owners with creating new stores, 
-                                    making customizations to their existing themes, addressing broken user experience (UX) issues, and 
+                                <p class="flowout-faq-answer-text">We specialize in using web technologies 
+                                    to build websites. Currently, we focus on assisting online business owners with creating their website and stores, 
+                                    making customizations to their existing websites, addressing broken user experience (UX) issues, and 
                                     optimizing their stores.</p>
                             </div>
                         </div>
@@ -606,7 +606,7 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">We offer various popular services such as complete Shopify store 
+                                <p class="flowout-faq-answer-text">We offer various popular services such as complete Website Design, Social Media Management, Shopify store 
                                     builds, developing custom Shopify themes, creating custom dynamic theme sections, integrating 
                                     apps, optimizing speed, configuring stores, and setting up language translations or shipping 
                                     settings. These are only a few examples, and we can schedule a quick phone call to discuss 
@@ -620,7 +620,7 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">We offer both, custom tasks and full-service theme design 
+                                <p class="flowout-faq-answer-text">We offer both, custom tasks and full-service website design 
                                     and development. If you would like to discuss further, please reach out and we will be happy 
                                     to provide a tailored quote for your project.</p>
                             </div>
@@ -631,10 +631,7 @@
                                 <div class="flowout-faq-icon"></div>
                             </div>
                             <div class="flowout-faq-answer">
-                                <p class="flowout-faq-answer-text">The required budget varies depending on the project's 
-                                    unique requirements. However, as a general guideline, a budget of at least $1,000 is
-                                    recommended for most customization work. Smaller tasks may require less, but this is 
-                                    the average cost for most customization work.</p>
+                                <p class="flowout-faq-answer-text">Costs can vary widely based on the complexity of design, features, and functionalities required. Custom sites often have higher upfront costs but offer more flexibility and scalability.</p>
                             </div>
                         </div>
                     </div>
@@ -651,7 +648,7 @@
                         we will get in touch with you.</h4>
                 </div>
                 <div class="flowout-hero-wrapper flowout-hero-buttons"><a
-                        href="mailto:shane@thinkdone.co?subject=Free%20Quote"
+                        href="mailto:shayangardezi@hotmail.com?subject=Free%20Quote"
                         class="flowout-button flowout-button-big flowout-button-cta flowout-button-footer w-button">Email
                         us</a></div>
             </div>
@@ -673,7 +670,7 @@
             <div class="flowout-container w-container">
                 <div class="flowout-footer-wrapper"><a href="http://thinkdone.co" target="_blank"
                         class="flowout-footer-logo w-inline-block"><img
-                            src="https://uploads-ssl.webflow.com/632f263678283128df18c09d/632ffaf68dc8708617f62908_crafted.svg"
+                            src="https://uploads-ssl.webflow.com/632f263678283128df18c09d/632ffaf68dc8708617f62908_crafted1.svg"
                             loading="lazy" width="200" alt="" class="image-5" /></a>
                     <div class="flowout-footer-menu"><a href="#features" class="flowout-footer-menu-link">Features</a><a
                             href="#pricing" class="flowout-footer-menu-link">Pricing</a><a href="#testimonials"
