--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                     <div class="flowout-section-item-left">
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Start —</h3>
-                            <p class="flowout-section-item-text">If you have an idea for a business, and want to start
-                                an eCommerce store, we&#x27;d love to help! We&#x27;ll take care of everything, so you
+                            <p class="flowout-section-item-text">If you have an idea for a business, and want to build
+                                an a website for your business, we&#x27;d love to help! We&#x27;ll take care of everything, so you
                                 can run your business without worry.</p>
                             <div class="flowout-divider"></div>
                             <p class="flowout-section-item-quote">“Think Done has been a great help for me when I needed
@@ -156,13 +156,13 @@
                     <div class="flowout-section-item-right">
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Manage —</h3>
-                            <p class="flowout-section-item-text">We help you manage your store with ease, sync and keep
+                            <p class="flowout-section-item-text">We help you manage your website with ease, sync and keep
                                 track of all your orders in one place. Spend less time on inventory and more time doing
                                 what matters, like improving customer service, marketing, using data to make informed
                                 decisions, and more.</p>
                             <div class="flowout-divider"></div>
                             <p class="flowout-section-item-quote">“I am incredibly thankful to the team for their support 
-                                during the opening of my store. They provided assistance in every step of the process and 
+                                during the launch of my website. They provided assistance in every step of the process and 
                                 I am very appreciative of their hard work.”</p>
                             <div class="flowout-author flowout-section-item-author">
                                 <div class="flowout-author-image author-2"></div>
@@ -178,7 +178,7 @@
                     <div class="flowout-section-item-left">
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Grow —</h3>
-                            <p class="flowout-section-item-text">Taking your ecommerce presence to the next level is our
+                            <p class="flowout-section-item-text">Taking your website presence to the next level is our
                                 specialty. We analyze your data, recommend improvements, and implement them all to
                                 achieve maximum results.</p>
                             <div class="flowout-divider"></div>
@@ -460,7 +460,7 @@
                             <div class="flowout-slide-item">
                                 <p class="flowout-testimonial">“I have worked with Think Done on multiple projects. They
                                     were very helpful in understanding my needs, and their response time is always
-                                    super-fast. I will continue to use their services for all my Shopify needs!”</p>
+                                    super-fast. I will continue to use their services for all my website needs!”</p>
                                 <div class="flowout-author">
                                     <div class="flowout-author-image author-4"></div>
                                     <div class="flowout-author-info">
@@ -474,7 +474,7 @@
                             <div class="flowout-slide-item">
                                 <p class="flowout-testimonial">“The team at Think Done were always available to answer
                                     my questions, big or small. They are very knowledgeable, and I would recommend them
-                                    to anyone looking for a complete Shopify store build.”</p>
+                                    to anyone looking for a complete website build.”</p>
                                 <div class="flowout-author">
                                     <div class="flowout-author-image author-5"></div>
                                     <div class="flowout-author-info">
