--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="flowout-hero">
                 <h1 class="flowout-hero-wrapper flowout-hero-heading">Experience transformation on an entirely new
                     level.</h1>
-                <p class="flowout-hero-wrapper flowout-hero-text">We craft e-commerce experiences that attract, delight
+                <p class="flowout-hero-wrapper flowout-hero-text">We craft digital experiences that attract, delight
                     and retain your customers with high quality web design, development and marketing solutions.</p>
                 <div class="flowout-hero-wrapper flowout-hero-buttons"><a
                         href="https://koalendar.com/e/meet-with-think-done-digital" target="_blank"
@@ -126,7 +126,7 @@
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Start —</h3>
                             <p class="flowout-section-item-text">If you have an idea for a business, and want to build
-                                an a website for your business, we&#x27;d love to help! We&#x27;ll take care of everything, so you
+                                a website for your business, we&#x27;d love to help! We&#x27;ll take care of everything, so you
                                 can run your business without worry.</p>
                             <div class="flowout-divider"></div>
                             <p class="flowout-section-item-quote">“Think Done has been a great help for me when I needed
