--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Start —</h3>
                             <p class="flowout-section-item-text">If you have an idea for a business, and want to build
-                                a website for your business, we&#x27;d love to help! We&#x27;ll take care of everything, so you
+                                a website, we&#x27;d love to help! We&#x27;ll take care of everything, so you
                                 can run your business without worry.</p>
                             <div class="flowout-divider"></div>
                             <p class="flowout-section-item-quote">“Think Done has been a great help for me when I needed
-                                to get my shop up and running. I didn&#x27;t know where to begin and these guys helped
+                                to get my website up and running. I didn&#x27;t know where to begin and these guys helped
                                 me with all the necessary steps.”</p>
                             <div class="flowout-author flowout-section-item-author">
                                 <div class="flowout-author-image author-1"></div>
@@ -156,10 +156,9 @@
                     <div class="flowout-section-item-right">
                         <div class="flowout-section-item-content">
                             <h3 class="flowout-section-item-heading">Manage —</h3>
-                            <p class="flowout-section-item-text">We help you manage your website with ease, sync and keep
-                                track of all your orders in one place. Spend less time on inventory and more time doing
-                                what matters, like improving customer service, marketing, using data to make informed
-                                decisions, and more.</p>
+                            <p class="flowout-section-item-text">We help you manage your website with ease, making sure it is secure, responsive, 
+                                fully functional and up-to-date, once you've built your website. This process applies to the site's design, structure,
+                                 content, features and marketing.</p>
                             <div class="flowout-divider"></div>
                             <p class="flowout-section-item-quote">“I am incredibly thankful to the team for their support 
                                 during the launch of my website. They provided assistance in every step of the process and 
